Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89530

compile error on qsslsocket_schannel.cpp when using MinGW

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.0.1, 6.1.0 Alpha
    • 6.0.0 Beta2, 6.0.0
    • Network: SSL
    • None
    • Windows 10 19042
      MinGW-w64 8.1.0
    • Windows
    • 3eb35d324186b17d00f158d71a251f1bf93b6d2d (qt/qtbase/dev) 8f0eb2c6b0371afc60028398b908f4500979e7d6 (qt/qtbase/6.0)

    Description

      D:/Qt/qt-everywhere-src-6.0.0/qtbase/src/network/ssl/qsslsocket_schannel.cpp:716:5: error: 'TLS_PARAMETERS' was not declared in this scope
           TLS_PARAMETERS tlsParameters = {
           ^~~~~~~~~~~~~~
      D:/Qt/qt-everywhere-src-6.0.0/qtbase/src/network/ssl/qsslsocket_schannel.cpp:716:5: note: suggested alternative: 'VIDEOPARAMETERS'
           TLS_PARAMETERS tlsParameters = {
           ^~~~~~~~~~~~~~
           VIDEOPARAMETERS
      D:/Qt/qt-everywhere-src-6.0.0/qtbase/src/network/ssl/qsslsocket_schannel.cpp:725:9: error: 'SCH_CREDENTIALS' was not declared in this scope
               SCH_CREDENTIALS *cred = new SCH_CREDENTIALS{
               ^~~~~~~~~~~~~~~
      D:/Qt/qt-everywhere-src-6.0.0/qtbase/src/network/ssl/qsslsocket_schannel.cpp:725:9: note: suggested alternative: 'PCRYPT_CREDENTIALS'
               SCH_CREDENTIALS *cred = new SCH_CREDENTIALS{
               ^~~~~~~~~~~~~~~
               PCRYPT_CREDENTIALS
      

      It seems like NTDDI_WIN10_RS5 is undefined in MinGW-w64 v6.0.0 based GCC 8.1.0, and SUPPORTS_TLS13 is defined, which seems unexpected.

      Full build log attached.

      attachment "macros.txt" is output using the following command

      D:\Qt\build-Qtq0wx6m8>D:\mingw-w64\8.1.0\mingw64\bin\c++.exe -E -dM  -DMINGW_HAS_SECURE_API=1 -DNetwork_EXPORTS -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_NETWORK_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -DQT_MOC_COMPAT -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_USING_NAMESPACE -DQT_USE_QSTRINGBUILDER -DQT_USE_SYSTEM_PROXIES -DUNICODE -DWIN32 -DWIN64 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_USE_MATH_DEFINES -D_WIN32_WINNT=0x0601 -D_WIN64 -Iqtbase/src/network/Network_autogen/include -Iqtbase/include -Iqtbase/include/QtNetwork -ID:/Qt/qt-everywhere-src-6.0.0/qtbase/src/network -Iqtbase/src/network -ID:/Qt/qt-everywhere-src-6.0.0/qtbase/src/network/kernel -Iqtbase/include/QtNetwork/6.0.0 -Iqtbase/include/QtNetwork/6.0.0/QtNetwork -ID:/Qt/qt-everywhere-src-6.0.0/qtbase/src/network/../3rdparty/zlib/src -Iqtbase/include/QtCore -ID:/Qt/qt-everywhere-src-6.0.0/qtbase/mkspecs/win32-g++ -Iqtbase/src/corelib -Iqtbase/include/QtCore/6.0.0 -Iqtbase/include/QtCore/6.0.0/QtCore -DNDEBUG -O2 -fvisibility=hidden -fno-keep-inline-dllexport -Wall -Wextra -fno-exceptions -std=c++17 -Winvalid-pch -include D:/Qt/build-Qtq0wx6m8/qtbase/src/network/CMakeFiles/Network.dir/cmake_pch.hxx -MD -MT qtbase/src/network/CMakeFiles/Network.dir/ssl/qsslsocket_schannel.cpp.obj -MF qtbase\src\network\CMakeFiles\Network.dir\ssl\qsslsocket_schannel.cpp.obj.d -o 1.txt D:\Qt\qt-everywhere-src-6.0.0\qtbase\src\network\ssl\qsslsocket_schannel.cpp
      

      Attachments

        1. macros.txt
          1.18 MB
          Frank Su
        2. consoleText-extracted.txt
          18 kB
          Frank Su
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            manordheim MÃ¥rten Nordheim
            fsu0413 Frank Su
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes