QSslSocket_schannel: Don't compare against undefined value

Something defined is always greater than undefined

Fixes: QTBUG-89530
Change-Id: I7633dd4233f7b13c3c5be17352841ec873531ef9
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
(cherry picked from commit 3eb35d324186b17d00f158d71a251f1bf93b6d2d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>